plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.1.0'
  id 'org.beryx.jlink' version '2.26.0'
}

group 'Clases'
version 'CiclismoWindows'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'clases.ciclismowindows'
  mainClass = 'clases.ciclismowindows.HelloApplication'
}

javafx {
  version = '21'
  modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.web']
}

dependencies {
  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
  implementation 'com.squareup.retrofit2:retrofit:2.11.0'
  implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
  implementation 'com.squareup.okhttp3:okhttp:4.11.0'
  implementation 'com.google.code.gson:gson:2.10.1'
  implementation 'org.openjfx:javafx-controls:21'
  implementation 'org.openjfx:javafx-fxml:21'
}

test {
  useJUnitPlatform()
}

// Configuración para generar el JAR con el MANIFEST.MF correcto
jar {
  manifest {
    attributes(
            'Main-Class': 'clases.ciclismowindows.HelloApplication'
    )
  }
  from {
    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

sourceSets {
  main {
    resources {
      srcDirs = ["src/main/resources", "src/main/java"]
      includes = ["**/*.fxml", "**/*.properties", "**/*.jasper", "**/*.png", "**/*.html", "**/*.jrxml", "**/*.jpg"]
    }
  }
}

run {
  jvmArgs = [
          '--module-path', classpath.asPath,
          '--add-modules', 'javafx.controls,javafx.fxml'
  ]
}